fixed modal not rendering content not currently visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -991,6 +991,10 @@ li.learner {
   text-transform: uppercase;
 }
 
+.user-modal-empty.error {
+  color: var(--red);
+}
+
 .deep-dungeon-section {
   margin-top: 72px;
 }
